# DD2430-project

./: README.md  pyproject.toml
project/cache/: converted_temporal_rules.json  temporal_rules_1.json  temporal_rules_zero_shot.json  vectorstore.json  vectorstore_faiss.json
project/data/raw/WIKI/: get_history_graph.py
project/data/results/: README.md
project/data/results_old/: README.md
project/demos/: gentkg.py
project/notebooks/: 0.1-data-creation.ipynb  0.2-gen-tkg.ipynb  0.3-gen-tkg-original-rules.ipynb
project/src/GenTKG/: models.py  vectorstore.py
project/src/GenTKG/learners/: DEPRECATED_learner.py  interface.py  simple_learner.py
project/src/GenTKG/retrievers/: example_fact_retriever.py  gen_tkg_retriever.py  gen_tkg_zr_retriever.py  interface.py  naive_facts_retriever.py
project/src/GenTKG/rules_learning/: basic.py  grapher.py  id_words.py  learn.py  rule_learning.py  temporal_walk.py
