[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Hannes Gustafsson <hanng@kth.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
torchvision = "^0.19.1"
numpy = "^2.1.1"
jupyter = "^1.1.1"
torch-geometric = "^2.5.3"
networkx = "^3.3"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
pyarrow = "^17.0.0"
pydantic = "^2.9.2"
openai = "^1.49.0"
python-dotenv = "^1.0.1"
humanize = "^4.10.0"
streamlit = "^1.38.0"
nest-asyncio = "^1.6.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
